# VoIPong

./: ALGORITHMS  AUTHORS  COPYING  ChangeLog  INSTALL  KNOWN_BUGS  LICENSE  Makefile.bsd  Makefile.linux  NEWS  README  THANKS  TODO  conf.c  configure.in  miscutil.c  modvocoder_pcma.c  modvocoder_pcmu.c  voipctl.c  voipong.c  voipongcdr.c  voipongcodec.c  voipongfixed.c  voipongglobals.c  voiponglfp.c  voipongmgmt.c  voipongnet.c  voipongpcap.c  voipongsign.c  voipongsock.c  voipongvoip.c  voipongworker.c
docs/CVS/: Entries  Repository
docs/src/: Makefile  book.sgml  chapters.ent  config.sgml  dsom.sgml  examples.sgml  faq.sgml  features.sgml  installation.sgml  intro.sgml  thanks.sgml  usage.sgml
docs/src/CVS/: Entries  Repository  Root
docs/users-manual/: book.html  compilation.html  config-netfile.html  config.html  dsom.html  examples-msnetmeeting.html  examples.html  faq.html  features.html  index.html  installation.html  installports.html  intro.html  thanks.html  usage-livecd.html  usage-nonpriv.html  usage-voipctl.html  usage.html
docs/users-manual/CVS/: Repository
etc/: voipong.conf  voipongnets
etc/CVS/: Entries  Repository
include/: Makefile.am  conf.h  g711.h  miscutil.h  osspecific.h  voipong.h  voipongcdr.h  voipongcodec.h  voipongmgmt.h  voipongnet.h  voipongpcap.h  voipongsign.h  voipongsock.h  voipongvoip.h  voipongworker.h
include/CVS/: Entries  Repository
